--- a/examples/national-registration/public/stylesheets/style.css
+++ b/examples/national-registration/public/stylesheets/style.css
@@ -12,7 +12,7 @@ svg {
   height: 30%;
 }
 
-button {
+.button-primary {
   background: linear-gradient(180deg, hsl(48, 100%, 67%) 80%, hsl(48, 100%, 40%) 140%);
   box-shadow: 0px 1px 0px 0px hsl(48, 100%, 40%);
 
@@ -39,11 +39,24 @@ header {
 }
 
 .navbar {
+  display: flex;
+  justify-content: flex-end;
   height: 45px;
   background: linear-gradient(180deg, hsl(48, 100%, 67%) 70%, hsl(48, 100%, 40%) 140%);
 
   box-shadow: 0px 1px 0px 0px hsl(48, 100%, 40%);
   margin-bottom: 1px;
+}
+
+.navbar-button {
+  background-color: transparent;
+  border: none;
+  outline: none;
+
+  margin-right: 30px;
+
+  font-family: 'Open Sans', sans-serif;
+  font-size: 14px;
 }
 
 .content {
